# GraphForge

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: architecture.md  architecture.zh-CN.md  graph_engineer_pattern.md  improvements.md
examples/: 00_quick_start.py  01_state_management.py  02_conditional_routing.py  03_streaming.py  04_react_agent.py  05_multi_agent.py  06_rag.py  07_guardrails.py  08_checkpointing.py  09_serve.py  10_store_memory.py  11_cost_tracking.py  12_complex_graph.py  README.md
graphforge/: __init__.py  _callbacks.py  _checkpoint.py  _checkpoint_postgres.py  _checkpoint_redis.py  _checkpoint_sqlite.py  _command.py  _compat.py  _dashboard.py  _edge.py  _executor.py  _graph.py  _graph.py.bak  _http_server.py  _interrupt.py  _logging.py  _map_reduce.py  _mermaid.py  _middleware.py  _node.py  _optimizer.py  _stream.py  _timeline.py  _tracing.py  _types.py  _visualize.py  _webhook.py  background.py  cli.py  distributed.py  eval.py  guardrails.py  pipeline.py  serve.py  state.py  store.py  store_redis.py  structured_output.py  tools.py
graphforge/a2a/: __init__.py  _agent_node.py  _client.py  _models.py  _server.py
graphforge/agents/: __init__.py  _react.py  _tool_node.py  patterns.py
graphforge/mcp/: __init__.py  _client.py  _server.py  _tool_node.py
graphforge/multimodal/: __init__.py  _image.py
tests/: __init__.py  test_a2a.py  test_approval.py  test_background.py  test_callbacks.py  test_cancellation.py  test_checkpoint.py  test_checkpoint_redis.py  test_checkpoint_skip.py  test_checkpoint_sqlite.py  test_configurable.py  test_cost.py  test_dashboard.py  test_distributed.py  test_eval.py  test_executor.py  test_fanout.py  test_features.py  test_graph.py  test_guardrails.py  test_managed_values.py  test_map_reduce.py  test_mcp.py  test_middleware.py  test_multimodal.py  test_optimizer.py  test_patterns.py  test_pipeline.py  test_rag.py  test_resume.py  test_sequence_parallel.py  test_serve.py  test_state.py  test_store.py  test_streaming.py  test_subgraph.py  test_timeline.py  test_timing.py  test_tokens.py  test_tools.py  (+2 more)
(+5 files in other folders)
